Fixed color property spacing problem in style.css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #eceef1;
+	background-color:#eceef1;
 }
 
 header {
@@ -20,13 +20,13 @@ header {
 
 #header-span {
 	font-weight: 100;
-	color: #505050;
+	color:#505050;
 }
 
 .button {
-	background-color: #0077c5;
-	color: white;
-	border: 1px solid #4c4c4c;
+	background-color:#0077c5;
+	color:white;
+	border: 1px solid#4c4c4c;
 	padding: 0 20px;
 	border-radius: 4px;
 	font-size: 1.125em;
@@ -49,14 +49,14 @@ h1 {
 	font-size: 36px;
 	font-family: Helvetica, sans-serif;
 	font-weight: bold;
-	color: #8d9096;
+	color:#8d9096;
 	margin-bottom: 20px;
 }
 
 .subtitle {
 	font-family: Helvetica, sans-serif;
 	font-size: 18px;
-	color: #6b6c72;
+	color:#6b6c72;
 	margin-bottom: 20px;
 }
 
@@ -67,32 +67,32 @@ h1 {
 }
 
 #blue {
-	border-color: #00a6a4;
-	background-color: #00a6a4;
-	color: #00a6a4;
+	border-color:#00a6a4;
+	background-color:#00a6a4;
+	color:#00a6a4;
 }
 
 #green {
-	border-color: #2ca01c;
-	background-color: #2ca01c;
-	color: #2ca01c;
+	border-color:#2ca01c;
+	background-color:#2ca01c;
+	color:#2ca01c;
 }
 
 #red {
-	border-color: #d52b1e;
-	background-color: #d52b1e;
-	color: #d52b1e;
+	border-color:#d52b1e;
+	background-color:#d52b1e;
+	color:#d52b1e;
 }
 
 form {
-	border: 1px solid #c7c7c7;
-	background-color: #ffffff;
+	border: 1px solid#c7c7c7;
+	background-color:#fff;
 }
 
 h2 {
 	font-size: 24px;
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-	color: #4c4c4c;
+	color:#4c4c4c;
 	font-weight: 400;
 	margin: 0px 30px 18px 30px;
 	text-align: center;
@@ -101,13 +101,13 @@ h2 {
 h5 {
 	font-size: 14px;
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-	color: #4c4c4c;
+	color:#4c4c4c;
 	font-weight: 300;
 	text-align: center;
 }
 
 a {
-	color: #0077c5;
+	color:#0077c5;
 	text-decoration: none;
 }
 
@@ -128,14 +128,14 @@ fieldset {
 label {
 	font-family: Helvetica, sans-serif;
 	font-weight: 400;
-	color: #404040;
+	color:#404040;
 	font-size: 14px;
 	line-height: 25px;
 }
 
 input {
 	height: 34px;
-	border: 1px solid #c1c5c8;
+	border: 1px solid#c1c5c8;
 	width: 320px;
 	min-width: 160px;
 	padding-left: 8px;
@@ -152,7 +152,7 @@ input {
 
 .section-p {
 	font-size: 10px;
-	color: #444;
+	color:#444;
 	padding-top: 10px;
 }
 
@@ -174,26 +174,26 @@ input {
 	text-align: center;
 	max-width: 220px;
 	font-size: 12px;
-	color: #757575;
+	color:#757575;
 	margin: 0 auto;
 }
 
 #recaptcha {
-	background-color: #eceef1;
+	background-color:#eceef1;
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 	font-size: 10px;
 	font-weight: 400;
 	text-align: center;
 	width: 100%;
 	padding: 16px 0;
-	color: #757575;
+	color:#757575;
 }
 
 footer {
 	font-family: Helvetica Neue, Helvetica, Arial sans-serif;
 	text-align: center;
 	margin: 20px;
-	color: #505050;
+	color:#505050;
 	font-size: 10px;
 }
 
@@ -203,7 +203,7 @@ footer {
 }
 
 footer a {
-	color: #505050;
+	color:#505050;
 }
 
 footer a:hover {
